javali_tests/A3/A4_keinestamSchmid/success/Positive.2.2.2.NO.SUCH.TYPE.javali
// Rule 2.2.2: The superclass specified for each class exists

class Main {
	void main() {
		int i;
	}
}

class SuperClass {
	void swap() {
		int i;
	}
}

class SubClass extends SuperClass {
	void snap() {
		int j;
	}
}


