javali_tests/A3/A4_keinestamSchmid/fail/Error.2.2.2.NO.SUCH.TYPE.javali
// Rule 2.2.2: The superclass specified for each class exists

class Main extends NoSuperclass {
	void main() {
		int i;
	}
}

class SubClass extends Superclass {
	void snap() {
		int j;
	}
}


